--- a/css/style.css
+++ b/css/style.css
@@ -791,71 +791,95 @@ See separate stylesheet: 'easy-responsive-tabs.css'
   color: #ddd; }
 
 /*------------------------------------ Register Form -----------------------------*/
-div#register-form {
-  width: 400px;
-  overflow: hidden;
-  height: 270px;
-  position: relative;
-  background: #f9f9f9;
-  font-family: Helvetica Neue, Helvetica, Arial !important; }
+/*div#register-form {
+    width: 400px; 
+    overflow: hidden; 
+    height: 270px; 
+    position: relative; 
+    background: #f9f9f9; //url(images/secure.png) no-repeat 260px 40px; 
+    font-family: Helvetica Neue, Helvetica, Arial !important;
+}
 
 div#register-form input[type="text"] {
-  display: block;
-  border: 1px solid #ccc;
-  margin: 5px 20px;
-  padding: 9px 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  width: 200px;
-  font-family: Helvetica Neue, Helvetica, Arial !important;
-  color: #000f16; }
-
+    display: block;
+    border: 1px solid #ccc;
+    margin: 5px 20px;
+    padding: 9px 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius:4px;
+    width: 200px;
+    font-family: Helvetica Neue, Helvetica, Arial !important;
+    color: $background-color; 
+}
+ 
 div#register-form input[type="text"]:hover {
-  border-color: #b1b1b1; }
+    border-color: #b1b1b1;
 
+}
+ 
 div#register-form input[type="text"]:focus {
-  -moz-box-shadow: 0 0 3px #ccc;
-  -webkit-box-shadow: 0 0 3px #ccc; }
+    -moz-box-shadow: 0 0 3px #ccc;
+    -webkit-box-shadow: 0 0 3px #ccc;
+}
 
 div#register-form input[type="submit"]#register {
-  background: url(images/register.jpg) no-repeat;
-  border: 0;
-  clear: both;
-  cursor: pointer;
-  height: 31px;
-  overflow: hidden;
-  position: relative;
-  left: 295px;
-  text-indent: -9999px;
-  top: 42px;
-  width: 92px; }
-
+    background: url(images/register.jpg) no-repeat;
+    border: 0;
+    clear: both;
+    cursor: pointer;
+    height: 31px;
+    overflow: hidden;
+    position: relative;
+    left:295px;
+    text-indent: -9999px;
+    top:42px;
+    width:92px;
+}
 div#register-form input[type="submit"]#register:hover {
-  background-position: 0 -32px; }
+    background-position: 0 -32px;
+}
 
 #register-form span {
-  display: block;
-  margin-bottom: 22px;
-  color: #b2854c; }
-
-#register-form .title {
-  margin-left: 15px; }
-
+    display: block;
+    margin-bottom: 22px;
+    color: $gold;
+}
+ 
+#register-form .title {margin-left:15px}
 #register-form .title h1,
 #register-form .title h1 {
-  margin: 7px 0;
-  color: #b2854c; }
-
+    margin:7px 0;
+    color: $gold;
+}
+ 
 p.statement {
-  position: absolute;
-  bottom: -2px;
-  left: 10px;
-  font-size: .9em;
-  color: #b2854c; }
-
+    position:absolute;
+    bottom:-2px;
+    left:10px;
+    font-size:.9em;
+    color: $gold;
+}*/
 /*--------- Version 2 -----------*/
-.container .register label {
-  color: white; }
+.register-pic {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 15, 22, 0.5)), to(rgba(0, 15, 22, 0.5))), url("img/stone-spa.jpg");
+  background: -webkit-linear-gradient(rgba(0, 15, 22, 0.5), rgba(0, 15, 22, 0.5)), url("img/stone-spa.jpg");
+  background: linear-gradient(rgba(0, 15, 22, 0.5), rgba(0, 15, 22, 0.5)), url("img/stone-spa.jpg");
+  -webkit-background-size: 100%;
+  background-size: 100%;
+  min-height: 600px;
+  overflow: hidden; }
+
+.container.register {
+  margin-top: 20vh;
+  color: #000f16;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 5px #555555;
+  box-shadow: 0 0 5px #555; }
+  @media screen and (min-width: 600px) {
+    .container.register {
+      width: 35%;
+      padding: 50px; } }
 
 /*--------------------------------------- My Account Form ---------------------*/
 .account-form {
@@ -896,30 +920,31 @@ p.statement {
   border: 1px dotted #f1a9a0; }
 
 /*------------------------------------ Page display Services -----------------------------*/
-.facial-content {
+.services-content {
   background-color: white;
   padding: 20px; }
   @media screen and (max-width: 600px) {
-    .facial-content {
+    .services-content {
       padding: 10px; } }
-  .facial-content h2 {
+  .services-content h2 {
     color: #b2854c; }
     @media screen and (max-width: 600px) {
-      .facial-content h2 {
-        text-align: center; } }
-  .facial-content p {
+      .services-content h2 {
+        text-align: center;
+        margin-top: 20px; } }
+  .services-content p {
     font-size: 1.3em;
     line-height: 2;
     text-align: justify; }
     @media screen and (max-width: 600px) {
-      .facial-content p {
+      .services-content p {
         font-size: 1.1em; } }
-  .facial-content h3 {
+  .services-content h3 {
     font-weight: bold;
     font-size: 1.1em; }
 
 #back-arrow {
-  color: #f1a9a0;
+  color: #abb7b7;
   padding-bottom: 10px;
   padding-left: 5px; }
 
@@ -934,7 +959,7 @@ p.statement {
   overflow: hidden; }
 
 .login-form {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   margin-top: 20vh;
   border-radius: 2px;
   -webkit-box-shadow: 0 0 5px #555555;
@@ -944,11 +969,44 @@ p.statement {
       width: 35%;
       padding: 50px; } }
 
-input[type="text"] {
-  padding-right: 5px; }
+input[type="text"],
+input[type="password"] {
+  padding: 5px;
+  font-size: 12px;
+  font-family: 'Andale Mono'; }
 
 label {
-  margin-right: 10px; }
+  margin-right: 10px;
+  font-size: 16px; }
+
+input[type="submit"] {
+  margin-top: 30px;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  background-color: white;
+  color: #000f16;
+  font-family: 'Open Sans'; }
+
+.login h1 a {
+  background-image: url("../images/w-logo-blue.png?ver=20131202");
+  background-image: none, url("../images/wordpress-logo.svg?ver=20131107");
+  -webkit-background-size: 80px 80px;
+  background-size: 80px 80px;
+  background-position: center top;
+  background-repeat: no-repeat;
+  color: #999;
+  height: 80px;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 1.3em;
+  margin: 0 auto 25px;
+  padding: 0;
+  text-decoration: none;
+  width: 80px;
+  text-indent: -9999px;
+  outline: none;
+  overflow: hidden;
+  display: block; }
 
 /*------------------------------------ Footer -----------------------------*/
 footer {
